--- a/templates/landing.html
+++ b/templates/landing.html
@@ -26,8 +26,8 @@
     <div class="container">
         <h1 class="text-center">
             Bienvenidos al proyecto de BigData<BR> 
-                creado por XYZ<br> 
-                como parte de <br>
+                creado por Diego Castillo<br> 
+                como parte de proyecto de BigData <br>
                 un proyecto de clase<br> 
                 En la maestría de Analítica de Datos <br>
                 De la Universidad Central</h1>
